# ct_icp

./: .gitignore  CMakeLists.txt  CMakelists.txt  CT_ICP_buildVS2019x64.bat  GUI Window.conf  LICENSE  ct_icp_build.bat  ct_icp_build.sh  default_config.yaml  env.bat  env.sh  kitti_config.yaml  readme.md  robust_driving_config.yaml  robust_high_frequency_config.yaml  segway_config.yaml
.github/workflows/: build.yml
cmake/: external.cmake  flags.cmake  includes.cmake  install_utils.cmake  project_config.cmake.in  superbuild_utils.cmake  target_utils.cmake  test.cmake  test_utils.cmake  utils.cmake  viz3d_utils.cmake
command/: CMakeLists.txt  cmd_run_odometry.cpp  cmd_viz_dataset.cpp  odometry_runner.cpp  odometry_runner.h
config/: synthetic_ct_icp_config.yaml
config/integration/ct_icp/: first_scene_config.yaml
config/odometry/: driving_config.yaml  nclt_config.yaml
config/synthetic/: courtyard.yaml  synthetic_dataset.yaml
include/SlamCore/: cereal.h  ceres_utils.h  config_utils.h  conversion.h  eval.h  generic_tools.h  geometry.h  imu.h  io.h  pointcloud.h  predicates.h  timer.h  traits.h  trajectory.h  types.h  utils.h
include/SlamCore-viz3d/: viz3d_utils.h  viz3d_windows.h
include/SlamCore/algorithm/: grid_sampling.h
include/SlamCore/concurrent/: blocking_queue.h
include/SlamCore/data/: buffer.h  buffer_collection.h  proxy_ref.h  schema.h  view.h
include/SlamCore/experimental/: map.h  neighborhood.h  synthetic.h
include/SlamCore/reactors/: handler.h  notifier.h  observer.h  pointcloud_writer.h  reactor.h  scheduler.h
include/ct_icp/: config.h  cost_functions.h  ct_icp.h  dataset.h  evaluate_slam.h  io.h  map.h  motion_model.h  neighborhood_strategy.h  odometry.h  types.h  utils.h  viz3d_utils.h
include/ct_icp-viz3d/: dataset_window.h  hilti_dataset_window.h
include/ct_icp/Utilities/: File.h  (+1 more)
python/: requirements.txt  run_slam.py  show_nclt_dataset.py
ros/catkin_ws/ct_icp_odometry/: CMakeLists.txt  Readme.md  package.xml
ros/catkin_ws/ct_icp_odometry/launch/: ct_icp_eval_dataset.launch  ct_icp_on_dataset.launch  ct_icp_on_rosbag.launch  ct_icp_slam.launch
ros/catkin_ws/ct_icp_odometry/launch/nhcd/: lidar_odometry_nhcd_os128.launch  lidar_odometry_nhcd_os64.launch
ros/catkin_ws/ct_icp_odometry/launch/subT/: lidar_odometry_subt.launch
ros/catkin_ws/ct_icp_odometry/launch/urban_loco/: urban_loco_CAL.launch  urban_loco_HK.launch
ros/catkin_ws/ct_icp_odometry/params/: ct_icp_odometry.rviz
ros/catkin_ws/ct_icp_odometry/params/ct_icp/: ct_icp_driving.yaml  ct_icp_driving_fast.yaml
ros/catkin_ws/ct_icp_odometry/params/ct_icp/nhcd/: nhcd_config.yaml
ros/catkin_ws/ct_icp_odometry/params/ct_icp/subT/: ct_icp_subt_config.yaml
ros/catkin_ws/ct_icp_odometry/params/ct_icp/urban_loco/: hong_kong.yaml
ros/catkin_ws/ct_icp_odometry/src/: ct_icp_dataset_node.cxx  ct_icp_evaluation_node.cxx  ct_icp_odometry_node.cxx  utils.h
ros/catkin_ws/slam_roscore/: CMakeLists.txt  Readme.md  package.xml
ros/catkin_ws/slam_roscore/launch/: rosbag_info.launch
ros/catkin_ws/slam_roscore/msg/: monitor_entry.msg
ros/catkin_ws/slam_roscore/scripts/: monitor_node.py
ros/catkin_ws/slam_roscore/src/: rosbag_info.cxx  rosbag_to_ply.cxx
ros/ct_icp_odometry/: CMakeLists.txt  package.xml
ros/ct_icp_odometry/launch/: launch_slam_dataset.launch
ros/ct_icp_odometry/src/: ct_icp_dataset_node.cxx  ct_icp_odometry_node.cxx  odometry_node.cxx
ros/roscore/: CMakeLists.txt
ros/roscore/include/ROSCore/: nav_msgs_conversion.h  pc2_conversion.h  pcl_conversion.h  point_types.h
ros/roscore/src/: CMakeLists.txt  nav_msgs_conversion.cxx  pc2_conversion.cxx
ros/roscore/test/: CMakeLists.txt
ros/roscore/test/unit/: CMakeLists.txt  test_pc2_conversion.cxx
src/: CMakeLists.txt  ct_icp.cpp  dataset.cpp  evaluate.hpp  evaluate_slam.hpp  io.cpp  io.hpp  main.cpp  odometry.cpp  odometry.hpp  slam.cpp
src/SlamCore/: CMakeLists.txt  ceres_utils.cxx  config_utils.cxx  eval.cxx  geometry.cxx  imu.cxx  io.cxx  pointcloud.cxx  timer.cxx  trajectory.cxx  types.cxx  utils.cxx  viz3d_utils.cxx  viz3d_windows.cxx
src/SlamCore/algorithm/: grid_sampling.cxx
src/SlamCore/data/: buffer.cxx  buffer_collection.cxx  schema.cxx
src/SlamCore/experimental/: map.cxx  neighborhood.cxx  synthetic.cxx
src/SlamCore/reactors/: pointcloud_writer.cxx  scheduler.cxx
src/Utilities/: PersoTimer.cpp
src/binding/: CMakeLists.txt  setup.py.in
src/binding/pyct_icp/: __init__.py  pyct_icp.cpp
src/ct_icp/: CMakeLists.txt  config.cpp  cost_function.cpp  cost_functions.h  ct_icp.cpp  ct_icp.hpp  dataset.cpp  dataset.hpp  dataset_window.cpp  evaluate_slam.cpp  evaluate_slam.hpp  io.cpp  io.hpp  map.cpp  motion_model.cpp  neighborhood_strategy.cpp  odometry.cpp  odometry.hpp  test_ceres.cpp  types.hpp  utils.hpp  viz3d_utils.cpp
src/ct_icp/Eigen/: CMakeLists.txt  readme.txt
src/ct_icp/Utilities/: File.cpp  PersoTimer.cpp  PlyFile.cpp  PlyFile.h
src/ct_icp/reactors/: dataset_loader.cpp  logger.cpp  registration.cpp
superbuild/: CMakeLists.txt
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  testint_ct_icp.cpp  testint_datasets.cpp  testint_odometry.cpp  testint_utils.h
test/regression/: CMakeLists.txt  regression_config_short_drive.yaml  regression_config_short_nclt.yaml  regression_robust_config_short_drive.yaml  regression_run.cxx
test/unit/: CMakeLists.txt  test_ct_icp.cxx  test_dataset.cxx
test/unit/SlamCore/: CMakeLists.txt  test_A_grid_sampling.cxx  test_blocking_queue.cxx  test_buffer.cxx  test_buffer_collection.cxx  test_cereal.cxx  test_config.cxx  test_conversion.cxx  test_eval.cxx  test_geometry.cxx  test_imu.cxx  test_io.cxx  test_iterator.cxx  test_map.cxx  test_neighborhood.cxx  test_pointcloud.cxx  test_predicates.cxx  test_reactor.cxx  test_schema.cxx  test_synthetic.cxx  test_timer.cxx  test_traits.cxx  test_trajectory.cxx  test_types.cxx  test_utils.h  test_view.cxx  test_viz3d_utils.cxx  test_yaml_utils.cxx
test/unit/ct_icp/: CMakeLists.txt  test_cost_functions.cxx  test_ct_icp.cxx  test_dataset.cxx  test_memory.cxx
tests/: test_binding.py
(+9 files in other folders)
