<?xml version="1.0"?>
<package format="2">
    <name>ct_icp_odometry</name>
    <version>0.0.1</version>
    <description>ROS Wrapping of CT-ICP Lidar SLAM Algorithm</description>
    <license>MIT</license>
    <buildtool_depend>catkin</buildtool_depend>
    <maintainer email="pierre.dellenbach@mines-paristech.com">Pierre Dellenbach</maintainer>

    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>message_runtime</depend>

</package>